--- a/chat/public/index.html
+++ b/chat/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Kunal lats talk app</title>
+  <title>Kunal lets talk app</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
