--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Kunal let's talk app</title>
   <link rel="stylesheet" href="style.css"/>
-  <link rel="stylesheet" href="whatsappstyle.css"/>
   <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
   <style>
 
     html, body {
