--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   </ul>
 
   <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-
+  <script src="/ApiAi.js"></script>
   <script src="/socket.io.js"></script>
   <script src="/main.js"></script>
 
